@@ -1,3 +1,11 @@
+2004/05/16 17:45 (+0200) kaffeetisch
+
+	* t/GnomeDruid.t: Add reference to the relevant bug to the
+	set_contents_background comment.
+
+	* t/GnomeThumbnail.t: Test has_uri and is_valid but skip them for
+	now since they're broken.
+
 2004/04/27 20:45 (+0200) kaffeetisch
 
 	* Makefile.PL: Add Gnome2::Canvas to PREREQ_PM as well so that it
